--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,23 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 10%;
+  
+   
 }
 
-.App-link {
-  color: #61dafb;
+
+.custombutton{
+  border-radius: 10px;
+  width: 150px;
+  
+  background: white
+}
+.addButton{
+  color: #007bff;
+  border-color: #007bff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.deleteButton{
+  color: #dc3545;
+  border-color: #dc3545;
 }
